# hansel

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml  setup.cfg
hansel/: __init__.py  filters.py
