[metadata]
name = hansel
description = "Function call logging."
url = "https://github.com/maurosilber/hansel"
author = "Mauro Silberberg"
author_email = "maurosilber@gmail.com"
license = "MIT"
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
keywords = logging
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python


[flake8]
# Black
max-line-length = 88
extend-ignore = E203
